[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "node_vm2"
version = "0.4.7"
authors = [
  { name="eight04", email="eight04@gmail.com" },
]
description = "A binding to Node.js + vm2, helps you execute JavaScript safely."
readme = "README.rst"
requires-python = ">=3.7"
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Environment :: Win32 (MS Windows)",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Natural Language :: Chinese (Traditional)",
  "Operating System :: Microsoft :: Windows :: Windows 7",
  "Programming Language :: Python :: 3.6",
  "Programming Language :: JavaScript",
  "Topic :: Software Development :: Libraries"
]
keywords = [
  "node", "js", "sandbox", "execute", "javascript"
]

[project.urls]
"Homepage" = "https://github.com/eight04/node_vm2"
"Documentation" = "https://node-vm2.readthedocs.io/en/latest/?badge=latest"
"Bug Tracker" = "https://github.com/eight04/node_vm2/issues"

[tool.setuptools.package-data]
node_vm2 = ["vm-server/**/*"]

[tool.vpip]
command_fallback = "python cute.py"
