[metadata]
name = node_vm2
version = attr: node_vm2.__pkginfo__.__version__
description = A binding to Node.js + vm2, helps you execute JavaScript safely.
author = eight
author_email = eight04@gmail.com
# See https://pypi.python.org/pypi?%3Aaction=list_classifiers
classifiers =
    Development Status :: 4 - Beta
	Environment :: Console
	Environment :: Win32 (MS Windows)
	Intended Audience :: Developers
	License :: OSI Approved :: MIT License
	Natural Language :: Chinese (Traditional)
	Operating System :: Microsoft :: Windows :: Windows 7
	Programming Language :: Python :: 3.6
	Programming Language :: JavaScript
	Topic :: Software Development :: Libraries
	
keywords = node, js, sandbox, execute, javascript
license = MIT
long_description = file: README.rst
url = https://github.com/eight04/node_vm2

[options]
zip_safe = False
packages = find:

[options.package_data]
node_vm2 = vm-server/*

[bdist_wheel]
universal = False
